@@ -1,3 +1,4 @@
+* BUG#9760 Handle multi report generation
 * BUG#9672 Fix register method
 * FEA#9299 Allow model-less impressions
 * FEA#9045 Allow to define printing template on a party
